[project]
name = "analysing-attack-skill"
version = "0.1.0"
description = "Claude skill to assist LLM-powered analysis of Mitre ATT&CK techniques and sub-techniques."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "mitreattack-python>=5.3.0",
    "requests>=2.32.5",
]
